Done Fetching Gallery Folder inside Gallery Picker screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,6 +34,7 @@
 
     <!--App Bar-->
     <string name="back">戻る</string>
+    <string name="next">次へ</string>
 
 
     <!--Settings -->
@@ -56,6 +57,8 @@
     <string name="create_listing_bottom_sheet_title">出品する</string>
     <string name="create_listing_from_pdt">新しく出品する</string>
     <string name="create_listing_from_draft">下書きから出品する</string>
+    <string name="create_listing_title_gallery">商品の情報を登録</string>
+    <string name="gallery_title_for_profile_image">プロフィール画像変更</string>
 
 
 
